<!--
  ~ Copyright (c) $originalComment.match("Copyright \(c\) (\d+)", 1, "-", "$today.year")2022 Nurujjaman Pollob, All Right Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  ~
  ~ If you have contributed in codebase,
  ~ and want to add your name or copyright in a particular class or method,
  ~ you must follow this following pattern:
  ~ <code>
  ~     // For a new method created by you,
  ~     //like this example method with name fooMethod()
  ~     //then use following format:
  ~
  ~     >>>
  ~     @author $Name and $CurrentYear.
  ~     $Documentation here.
  ~     $Notes
  ~     public boolean fooMethod(){}
  ~     <<<
  ~
  ~     // For an existing method
  ~
  ~     >>>
  ~     $Current Method Documentation(Update if needed)
  ~
  ~     Updated by $YourName
  ~     $Update summery
  ~     $Notes(If any)
  ~     <<<
  ~
  ~     // For a new class of file, that is not created by anyone else
  ~     >>>
  ~     Copyright (c) $CurrentYear $Name, All right reserved.
  ~
  ~     $Copyright Text.
  ~     $Notes(If Any)
  ~     <<<
  ~
  ~     // For a existing class, if you want to add your own copyright for your work.
  ~
  ~     >>>
  ~     $Current Copyright text
  ~
  ~     $YourCopyrightText
  ~     <<<
  ~
  ~     Done! Clean code!!
  ~ </code>
  ~
  ~
  -->

<resources>
    <string name="app_name">AndroidMailer</string>
    <string name="send_email">Send Email</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="enter_mail_subject">Enter Mail Subject</string>
    <string name="input_receipient_email_address">Input receipient email address</string>
    <string name="switch_to_encrypted_credential_version">Switch To Encrypted Credential version</string>
    <string name="switch_to_normal_credential_version">Switch to normal credential version</string>
</resources>