<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) $originalComment.match("Copyright \(c\) (\d+)", 1, "-", "$today.year")2022 Nurujjaman Pollob, All Right Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  ~
  ~ If you have contributed in codebase,
  ~ and want to add your name or copyright in a particular class or method,
  ~ you must follow this following pattern:
  ~ <code>
  ~     // For a new method created by you,
  ~     //like this example method with name fooMethod()
  ~     //then use following format:
  ~
  ~     >>>
  ~     @author $Name and $CurrentYear.
  ~     $Documentation here.
  ~     $Notes
  ~     public boolean fooMethod(){}
  ~     <<<
  ~
  ~     // For an existing method
  ~
  ~     >>>
  ~     $Current Method Documentation(Update if needed)
  ~
  ~     Updated by $YourName
  ~     $Update summery
  ~     $Notes(If any)
  ~     <<<
  ~
  ~     // For a new class of file, that is not created by anyone else
  ~     >>>
  ~     Copyright (c) $CurrentYear $Name, All right reserved.
  ~
  ~     $Copyright Text.
  ~     $Notes(If Any)
  ~     <<<
  ~
  ~     // For a existing class, if you want to add your own copyright for your work.
  ~
  ~     >>>
  ~     $Current Copyright text
  ~
  ~     $YourCopyrightText
  ~     <<<
  ~
  ~     Done! Clean code!!
  ~ </code>
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="50dp"
        android:text="@string/switch_to_normal_credential_version"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/general_activity_button"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/input_receipient_email_address"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/email_receiver_field_encrypted"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="25dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/enter_mail_subject"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/email_subject_field_encrypted"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="25dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/enter_your_message"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/email_message_field_encrypted"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="25dp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/pick_file_encrypted"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_baseline_attach_file_24" />

        <Button
            android:id="@+id/email_submit_button_encrypted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>